<resources>
    <string name="app_name">Kitty Message 6</string>

    <!-- menu items -->
    <string name="action_settings">Settings</string>
    <string name="action_history">History</string>
    <string name="action_clear">Clear</string>
    <string name="action_about">About</string>
    <string name="action_delete">Delete</string>

    <!-- about dialog -->
    <string name="about">About</string>
    <string name="author">Alex Tetervak, Sheridan College, 2020</string>

    <!-- radio button labels / output strings -->
    <string name="cat_purr">Purr</string>
    <string name="cat_mew">Mew</string>
    <string name="cat_hiss">Hiss</string>

    <!-- urgent / not urgent -->
    <string name="urgent">Urgent</string>
    <string name="not_urgent">Not Urgent</string>

    <!-- input / output labels -->
    <string name="select_message">Select a message</string>
    <string name="message_label">Received message</string>
    <string name="undefined">Undefined</string>

    <!-- button labels -->
    <string name="reset">Reset</string>
    <string name="send">Send</string>
    <string name="input">Input</string>

    <!-- floating label -->
    <string name="sheridan">Sheridan, 2020</string>

    <!-- activity & fragment labels -->
    <string name="input_fragment_label">Input</string>
    <string name="output_fragment_label">Output</string>
    <string name="history_fragment_label">History</string>
    <string name="settings_fragment_label">Settings</string>

    <!-- the history fragment -->
    <string name="count">%1$d.</string>
    <plurals name="history_total">
        <item quantity="one">History Total: %1$d message</item>
        <item quantity="other">History Total: %1$d messages</item>
    </plurals>
    <string name="delete_envelope">delete envelope</string>

    <!-- settings fragment -->
    <string name="default_message">Default Message</string>
    <string name="message_text">Message Text</string>
    <string name="urgent_delivery">Urgent Delivery</string>
    <string name="confirmation_dialogs">Confirmation Dialogs</string>
    <string name="confirm_delete_title">Confirm Delete</string>
    <string name="confirm_delete_on">Ask to confirm individual deletes</string>
    <string name="confirm_delete_off">Don\'t ask to confirm individual deletes</string>
    <string name="confirm_clear_title">Confirm Clear</string>
    <string name="confirm_clear_on">Ask to confirm clearing the history</string>
    <string name="confirm_clear_off">Don\'t ask to confirm clearing the history</string>

    <!-- confirmation dialog -->
    <string name="confirm_delete_message">Do you want to remove this message?</string>
    <string name="confirm_clear_message">Do you want to clear the history?</string>


</resources>