<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/default_message">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="urgent"
            android:summaryOff="@string/not_urgent"
            android:summaryOn="@string/urgent"
            android:title="@string/delivery_speed" />

        <ListPreference
            android:defaultValue="Mew"
            android:entries="@array/message_text_entries"
            android:entryValues="@array/message_text_entries"
            android:key="message"
            android:title="@string/message_text"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>