<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:gravity="center_horizontal"
        android:orientation="vertical"

        tools:context=".ui.input.InputFragment">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_message"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <CheckBox
            android:id="@+id/urgent_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/gap0"
            android:checked="true"
            android:text="@string/urgent" />

        <RadioGroup
            android:id="@+id/message_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/mew_button">

            <RadioButton
                android:id="@+id/purr_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cat_purr" />

            <RadioButton
                android:id="@+id/mew_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cat_mew" />

            <RadioButton
                android:id="@+id/hiss_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cat_hiss" />

        </RadioGroup>

        <Button
            android:id="@+id/send_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/gap0"
            android:text="@string/send"
            tools:ignore="RtlHardcoded" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

    </LinearLayout>
</layout>