<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="ca.tetervak.kittymessage6.ui.output.OutputViewModel"/>
        <import type="ca.tetervak.kittymessage6.util.DateTimeStamp"/>

        <variable
            name="viewModel"
            type="OutputViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        tools:context=".ui.OutputFragment">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/is_urgent_output"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:text="@{viewModel.mailbox.urgent ? @string/urgent : @string/not_urgent}"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/urgent" />

        <TextView
            android:id="@+id/message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.mailbox.textMessage}"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="@string/cat_mew" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:text="@{DateTimeStamp.formatDate(viewModel.mailbox.timeStamp)}"
            tools:text="October 11, 2020" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{DateTimeStamp.formatTime(viewModel.mailbox.timeStamp)}"
            tools:text="5PM:25:36" />

        <Button
            android:id="@+id/back_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_margin"
            android:text="@string/back" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2" />

    </LinearLayout>
</layout>